[package]
name = "irodori-extension-iotdb"
version = "0.1.3"
edition = "2021"
license = "0BSD"
description = "Native Irodori Table connector extension for IoTDB."
repository = "https://github.com/hjosugi/irodori-extension-iotdb"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_iotdb"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
iotdb = { package = "iotdb-client-rs", version = "0.3.12" }
serde_json = "1"

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
